--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <ul class="font-poppins" data-menu="list">
             <li><a href="#">Área de Atuação</a></li>
             <li data-dropdown>
-              <a href="#">Quem somos</a>
+              <a href="quem-somos.html">Quem somos</a>
               <ul class="dropdown-menu">
                 <li><a href="empresa.html">Empresa</a></li>
                 <li><a href="equipe.html">Equipe</a></li>
