--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <section class="introducao-bg container">
     <div class="introducao-conteudo">
-      <span>OAB/PE -000.00 - PE</span>
+      <span class="font-poppins">OAB/PE -000.00 - PE</span>
       <p class="font-poppins">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
       <a href="./"><button class="btn1 font-poppins">Agendar Agora</button></a>
     </div>
