--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="header-menu">
           <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
           <ul class="font-poppins" data-menu="list">
-            <li><a href="#">Área de Atuação</a></li>
+            <li><a href="#area-atuacao">Área de Atuação</a></li>
             <li data-dropdown>
               <a href="quem-somos.html">Quem somos</a>
               <ul class="dropdown-menu">
@@ -37,12 +37,52 @@
     </div>
   </header>
 
-  <section class="introducao-bg container">
-    <div class="introducao-conteudo">
+  <section class="introducao-bg">
+    <div class="introducao-conteudo container">
       <span class="font-poppins">OAB/PE -000.00 - PE</span>
       <p class="font-poppins">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
       <a href="./"><button class="btn1 font-poppins">Agendar Agora</button></a>
     </div>
+  </section>
+
+  <section class="area-atuacao-bg area-atuacao" id="area-atuacao">
+      <ul class="area-atuacao-lista container">
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Previdenciário</h1>
+          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
+          <p class="font-poppins cor-0 ">Auxílio Doença</p>
+          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
+          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+        </li>
+
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Previdenciário</h1>
+          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
+          <p class="font-poppins cor-0 ">Auxílio Doença</p>
+          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
+          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+        </li>
+
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Previdenciário</h1>
+          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
+          <p class="font-poppins cor-0 ">Auxílio Doença</p>
+          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
+          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+        </li>
+
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Previdenciário</h1>
+          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
+          <p class="font-poppins cor-0 ">Auxílio Doença</p>
+          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
+          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+        </li>
+      </ul>
   </section>
 
   <script type="module" src="./js/script.js"></script>
