--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
         <li>
           <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Previdenciário</h1>
-          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
-          <p class="font-poppins cor-0 ">Auxílio Doença</p>
-          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
-          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+          <h1 class="font-poppins cor-4">Criminal</h1>
+          <p class="font-poppins cor-0 ">Flagrante delito</p>
+          <p class="font-poppins cor-0 ">Audiência de custódia</p>
+          <p class="font-poppins cor-0">Inquérito policial</p>
+          <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
         </li>
 
         <li>
