--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
 
         <li>
           <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Previdenciário</h1>
-          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
-          <p class="font-poppins cor-0 ">Auxílio Doença</p>
-          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
-          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+          <h1 class="font-poppins cor-4">Inventário e Herança</h1>
+          <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
+          <p class="font-poppins cor-0 ">Solução de Conflitos</p>
+          <p class="font-poppins cor-0">Regularização dos Documentos</p>
+          <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
         </li>
 
         <li>
           <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Previdenciário</h1>
-          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
-          <p class="font-poppins cor-0 ">Auxílio Doença</p>
-          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
-          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+          <h1 class="font-poppins cor-4">Trabalhista</h1>
+          <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
+          <p class="font-poppins cor-0 ">Dano Moral e Material</p>
+          <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
+          <p class="font-poppins cor-0">Acidente de Trabalho</p>
         </li>
       </ul>
   </section>
