--- a/index.html
+++ b/index.html
@@ -83,6 +83,44 @@
           <p class="font-poppins cor-0">Acidente de Trabalho</p>
         </li>
       </ul>
+
+      <ul class="area-atuacao-lista container">
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Tributário</h1>
+          <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
+          <p class="font-poppins cor-0 ">Assessoria em procedimentos de fiscalização</p>
+          <p class="font-poppins cor-0">Defesas administrativas</p>
+          <p class="font-poppins cor-0">Planejamento tributário</p>
+        </li>
+
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Empresarial</h1>
+          <p class="font-poppins cor-0 ">Constituição da empresa</p>
+          <p class="font-poppins cor-0 ">Reestruturação Societária</p>
+          <p class="font-poppins cor-0">Resolução de conflitos entre os sócios</p>
+          <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
+        </li>
+
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Cobrança Judicial e Extrajudicial</h1>
+          <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
+          <p class="font-poppins cor-0 ">Recuperação de Valores</p>
+          <p class="font-poppins cor-0">Negociações de Dívidas</p>
+          <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
+        </li>
+
+        <li>
+          <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Divorcio</h1>
+          <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
+          <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
+          <p class="font-poppins cor-0">Partilha de bens</p>
+          <p class="font-poppins cor-0">Pensão Alimentícia para os filhos e/ou cônjuge</p>
+        </li>
+      </ul>
   </section>
 
   <script type="module" src="./js/script.js"></script>
