--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <li>
           <img src="icons/saldo-escala-esquerda.png" alt="icon">
-        <h1 class="font-poppins cor-4">Cobrança Judicial e Extrajudicial</h1>
+        <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
           <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
           <p class="font-poppins cor-0 ">Recuperação de Valores</p>
           <p class="font-poppins cor-0">Negociações de Dívidas</p>
