--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header-container">
       <div class="header-conteudo">
         <div>
-          <a href="./"><img class="logo" src="./icons/Moreno-Advocacia-White.png" alt="logo"></a>
+          <a href="./"><img class="logo" src="icons/logo2.png" alt="logo"></a>
         </div>
         <nav class="header-menu">
           <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
