--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <li>
           <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Divorcio</h1>
+          <h1 class="font-poppins cor-4">Divórcio</h1>
           <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
           <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
           <p class="font-poppins cor-0">Partilha de bens</p>
