--- a/index.html
+++ b/index.html
@@ -46,81 +46,74 @@
   </section>
 
   <section class="area-atuacao-bg area-atuacao" id="area-atuacao">
-      <ul class="area-atuacao-lista container">
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Previdenciário</h1>
-          <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
-          <p class="font-poppins cor-0 ">Auxílio Doença</p>
-          <p class="font-poppins cor-0">Aposentadoria por Idade</p>
-          <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
-        </li>
-
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Criminal</h1>
-          <p class="font-poppins cor-0 ">Flagrante delito</p>
-          <p class="font-poppins cor-0 ">Audiência de custódia</p>
-          <p class="font-poppins cor-0">Inquérito policial</p>
-          <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
-        </li>
-
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Inventário e Herança</h1>
-          <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
-          <p class="font-poppins cor-0 ">Solução de Conflitos</p>
-          <p class="font-poppins cor-0">Regularização dos Documentos</p>
-          <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
-        </li>
-
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Trabalhista</h1>
-          <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
-          <p class="font-poppins cor-0 ">Dano Moral e Material</p>
-          <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
-          <p class="font-poppins cor-0">Acidente de Trabalho</p>
-        </li>
-      </ul>
-
-      <ul class="area-atuacao-lista container">
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Tributário</h1>
-          <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
-          <p class="font-poppins cor-0 ">Assessoria em procedimentos de fiscalização</p>
-          <p class="font-poppins cor-0">Defesas administrativas</p>
-          <p class="font-poppins cor-0">Planejamento tributário</p>
-        </li>
-
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Empresarial</h1>
-          <p class="font-poppins cor-0 ">Constituição da empresa</p>
-          <p class="font-poppins cor-0 ">Reestruturação Societária</p>
-          <p class="font-poppins cor-0">Resolução de conflitos entre os sócios</p>
-          <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
-        </li>
-
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-        <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
-          <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
-          <p class="font-poppins cor-0 ">Recuperação de Valores</p>
-          <p class="font-poppins cor-0">Negociações de Dívidas</p>
-          <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
-        </li>
-
-        <li>
-          <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Divórcio</h1>
-          <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
-          <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
-          <p class="font-poppins cor-0">Partilha de bens</p>
-          <p class="font-poppins cor-0">Pensão Alimentícia para os filhos e/ou cônjuge</p>
-        </li>
-      </ul>
+      <div>
+        <ul class="area-atuacao-lista container">
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+            <h1 class="font-poppins cor-4">Previdenciário</h1>
+            <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
+            <p class="font-poppins cor-0 ">Auxílio Doença</p>
+            <p class="font-poppins cor-0">Aposentadoria por Idade</p>
+            <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+          </li>
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+            <h1 class="font-poppins cor-4">Criminal</h1>
+            <p class="font-poppins cor-0 ">Flagrante delito</p>
+            <p class="font-poppins cor-0 ">Audiência de custódia</p>
+            <p class="font-poppins cor-0">Inquérito policial</p>
+            <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
+          </li>
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+            <h1 class="font-poppins cor-4">Inventário e Herança</h1>
+            <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
+            <p class="font-poppins cor-0 ">Solução de Conflitos</p>
+            <p class="font-poppins cor-0">Regularização dos Documentos</p>
+            <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
+          </li>
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+            <h1 class="font-poppins cor-4">Trabalhista</h1>
+            <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
+            <p class="font-poppins cor-0 ">Dano Moral e Material</p>
+            <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
+            <p class="font-poppins cor-0">Acidente de Trabalho</p>
+          </li>
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+            <h1 class="font-poppins cor-4">Tributário</h1>
+            <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
+            <p class="font-poppins cor-0 ">Assessoria em procedimentos de fiscalização</p>
+            <p class="font-poppins cor-0">Defesas administrativas</p>
+            <p class="font-poppins cor-0">Planejamento tributário</p>
+          </li>
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+            <h1 class="font-poppins cor-4">Empresarial</h1>
+            <p class="font-poppins cor-0 ">Constituição da empresa</p>
+            <p class="font-poppins cor-0 ">Reestruturação Societária</p>
+            <p class="font-poppins cor-0">Resolução de conflitos entre os sócios</p>
+            <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
+          </li>
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+          <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
+            <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
+            <p class="font-poppins cor-0 ">Recuperação de Valores</p>
+            <p class="font-poppins cor-0">Negociações de Dívidas</p>
+            <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
+          </li>
+          <li>
+            <img src="icons/saldo-escala-esquerda.png" alt="icon">
+            <h1 class="font-poppins cor-4">Divórcio</h1>
+            <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
+            <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
+            <p class="font-poppins cor-0">Partilha de bens</p>
+            <p class="font-poppins cor-0">Pensão Alimentícia para os filhos e/ou cônjuge</p>
+          </li>
+        </ul>
+      </div>
   </section>
 
   <script type="module" src="./js/script.js"></script>
