--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li data-dropdown>
               <a href="quem-somos.html">Quem somos</a>
               <ul class="dropdown-menu">
-                <li><a href="empresa.html">Empresa</a></li>
+                <li><a href="empresa.html">Escritório</a></li>
                 <li><a href="equipe.html">Equipe</a></li>
                 <li><a href="socios.html">Socios</a></li>
               </ul>
@@ -112,6 +112,17 @@
             <p class="font-poppins cor-0">Pensão Alimentícia para os filhos e/ou cônjuge</p>
           </li>
         </ul>
+  </section>
+
+  <section class="escritorio-bg container">
+    <div class="escritorio-conteudo">
+      <div><img src="images/escritorio-1.jpeg" alt="escritorio"></div>
+        <div>
+          <h1 class="font-poppins">Bem-vindo a Carlos Araújo Advocacia</h1>
+          <p class="font-poppins">Com mais de 10 anos de experiência no campo jurídico, a Moreno Advocacia destaca-se por seu comprometimento, transparência e excelência no atendimento aos clientes. Nossa equipe altamente qualificada está preparada para fornecer soluções jurídicas eficientes e assertivas, atendendo às demandas de pessoas físicas, empresas e condomínios. Buscamos constantemente atualizar nossos conhecimentos, acompanhando as tendências e mudanças legislativas, a fim de oferecer um serviço jurídico de qualidade e alinhado às necessidades de nossos clientes. Nossa abordagem é fundamentada na ética, compromisso e profissionalismo, com o objetivo de defender os interesses dos nossos clientes de forma diligente. Carlos Araújo Advocacia, proporcionamos um ambiente acolhedor e confiável. Nosso objetivo é garantir seu conforto e segurança, tendo a certeza de que seu caso está nas mãos de profissionais competentes. Estamos prontos para oferecer a representação jurídica necessária e buscar as melhores soluções para suas demandas legais.</p>
+          <a href="./"><button class="btn1 font-poppins">Agendar Agora</button></a>
+        </div>
+    </div>
   </section>
 
   <script type="module" src="./js/script.js"></script>
