--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="estilos/style.css">
   <script>document.documentElement.className += ' js';</script>
 
-  <title>Jackson Albuquerque- ADV</title>
+  <title>Carlos Araújo-Advocacia</title>
 </head>
 <body>
   <header class="header-bg">
@@ -25,7 +25,7 @@
             <li data-dropdown>
               <a href="quem-somos.html">Quem somos</a>
               <ul class="dropdown-menu">
-                <li><a href="empresa.html">Escritório</a></li>
+                <li><a href="#escritorio">Escritório</a></li>
                 <li><a href="equipe.html">Equipe</a></li>
                 <li><a href="socios.html">Socios</a></li>
               </ul>
@@ -114,7 +114,7 @@
         </ul>
   </section>
 
-  <section class="escritorio-bg container">
+  <section class="escritorio-bg container" id="escritorio">
     <div class="escritorio-conteudo">
       <div><img src="images/escritorio-1.jpeg" alt="escritorio"></div>
         <div>
