--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
           <ul class="font-poppins" data-menu="list">
             <li><a href="#area-atuacao">Área de Atuação</a></li>
             <li data-dropdown>
-              <a href="quem-somos.html">Quem somos</a>
+              <div href="./">Quem somos</div>
               <ul class="dropdown-menu">
                 <li><a href="#escritorio">Escritório</a></li>
                 <li><a href="equipe.html">Equipe</a></li>
                 <li><a href="socios.html">Socios</a></li>
               </ul>
             </li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="./">Contato</a></li>
           </ul>
         </nav>
       </div>
