--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <span class="font-poppins">OAB/PE -000.00 - PE</span>
       <p class="font-poppins">Mais de 10 anos defendendo seus direitos com respeito e transparência.</p>
       <a href="./"><button class="btn1 font-poppins">Agendar Agora</button></a>
+      <div class="orcamento">
+        <a href="https://wa.me/558799696157" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
+      </div>
     </div>
   </section>
 
