--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@
     </div>
   </section>
 
+  <section class="equipe-bg">
+    <div class="equipe-conteudo container">
+      <h1 class="font-poppins cor-0">Equipe</h1>
+      <ul class="equipe-advg">
+        <li>
+          <div><img src="images/advg-1.jpeg" alt="advogado"></div>
+          <div class="equipe-advg-conteudo">
+            <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
+            <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <div class="contato-pessoal">
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
+          </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+
   <script type="module" src="./js/script.js"></script>
 </body>
 </html>
