--- a/index.html
+++ b/index.html
@@ -146,6 +146,19 @@
           </div>
         </li>
       </ul>
+
+      <ul class="equipe-advg">
+        <li>
+          <div class=" equipe-advg-conteudo-colum-2">
+            <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
+            <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <div class="contato-pessoal">
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
+          </div>
+          </div>
+          <div class="grid-colum-2"><img src="images/advg-2.jpeg" alt="advogado"></div>
+        </li>
+      </ul>
     </div>
   </section>
 
