--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           <div class="equipe-advg-conteudo">
             <h1 class="font-poppins cor-1">Dr. Carlos Araújo</h1>
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
@@ -151,12 +152,26 @@
           <div class=" equipe-advg-conteudo-colum-2">
             <h1 class="font-poppins cor-1">Dr. Matheus Barros</h1>
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
           </div>
           </div>
           <div class="grid-colum-2"><img src="images/advg-2.jpeg" alt="advogado"></div>
+        </li>
+
+        <li>
+          <div><img src="images/advg-3.jpeg" alt="advogado"></div>
+          <div class="equipe-advg-conteudo">
+            <h1 class="font-poppins cor-1">Dra. Josivânia Siqueira</h1>
+            <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
+            <p class="font-poppins">Especialista em direito trabalhista</p>
+            <div class="contato-pessoal">
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
+              <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
+          </div>
+          </div>
         </li>
       </ul>
     </div>
