--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="equipe-advg-conteudo">
             <h1 class="font-poppins cor-1">Dra. Josivânia Siqueira</h1>
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
-            <p class="font-poppins">Especialista em direito trabalhista</p>
+            <p class="font-poppins">Especialista em direito tarabalhista</p>
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
