--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
+              <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
         </li>
@@ -156,6 +157,7 @@
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
+              <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
           <div class="grid-colum-2"><img src="images/advg-2.jpeg" alt="advogado"></div>
@@ -170,6 +172,7 @@
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
+              <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
         </li>
