--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
+              <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
@@ -156,7 +156,7 @@
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
+              <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
@@ -171,7 +171,7 @@
             <p class="font-poppins">Especialista em direito trabalhista</p>
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
-              <a href="#" target="_blank"><img src="icons/icon-insta-2.png" alt="instagram"></a>
+              <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
