--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito criminal</p>
             <div class="contato-pessoal">
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
@@ -155,7 +155,7 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito previdenciário</p>
             <div class="contato-pessoal">
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
@@ -170,7 +170,7 @@
             <span class="font-poppins cor-1">OAB/PE -000.00 - PE</span>
             <p class="font-poppins">Especialista em direito trabalhista</p>
             <div class="contato-pessoal">
-              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap4.png" alt="zap"></a>
+              <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
