--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <div href="./">Quem somos</div>
               <ul class="dropdown-menu">
                 <li><a href="#escritorio">Escritório</a></li>
-                <li><a href="equipe.html">Equipe</a></li>
-                <li><a href="socios.html">Socios</a></li>
+                <li><a href="#equipe">Equipe</a></li>
+                <li><a href="#serviços">Serviços</a></li>
               </ul>
             </li>
             <li><a href="./">Contato</a></li>
@@ -132,7 +132,7 @@
   </section>
 
   <section class="equipe-bg">
-    <div class="equipe-conteudo container">
+    <div class="equipe-conteudo container" id="equipe">
       <h1 class="font-poppins cor-0">Equipe</h1>
       <ul class="equipe-advg">
         <li>
@@ -144,7 +144,7 @@
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
-              <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
+              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
         </li>
@@ -157,7 +157,7 @@
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
-              <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
+              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
           <div class="grid-colum-2"><img src="images/advg-2.jpeg" alt="advogado"></div>
@@ -172,7 +172,7 @@
             <div class="contato-pessoal">
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
-              <a href="#" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
+              <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
           </div>
           </div>
         </li>
