--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap" rel="stylesheet">
-
+  <link rel="shortcut icon" href="icons/logo2.png" type="image/x-icon">
   <link rel="stylesheet" href="estilos/style.css">
   <script>document.documentElement.className += ' js';</script>
 
@@ -16,7 +16,7 @@
     <div class="header-container">
       <div class="header-conteudo">
         <div>
-          <a href="./"><img class="logo" src="icons/logo2.png" alt="logo"></a>
+          <a href="./"><img class="logo" src="icons/logo.png" alt="logo"></a>
         </div>
         <nav class="header-menu">
           <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
@@ -48,8 +48,8 @@
     </div>
   </section>
 
-  <section class="area-atuacao-bg area-atuacao" id="area-atuacao">
-        <ul class="area-atuacao-lista container">
+  <section class="area-atuacao-bg area-atuacao">
+        <ul class="area-atuacao-lista container" id="area-atuacao">
           <li>
             <img src="icons/saldo-escala-esquerda.png" alt="icon">
             <h1 class="font-poppins cor-4">Previdenciário</h1>
@@ -177,6 +177,16 @@
           </div>
         </li>
       </ul>
+    </div>
+  </section>
+
+  <section class="contato-bg">
+    <div class="contato-conteudo">
+      <p>Como chegar</p>
+      <h1>Nossos Endereços</h1>
+      <div class="iframe-grid">
+
+      </div>
     </div>
   </section>
 
