--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
   <section class="contato-bg">
     <div class="contato-conteudo container">
-      <p class="font-poppins cor-4a">Como chegar</p>
+      <p class="font-poppins cor-4">Como chegar</p>
       <h1 class="font-poppins cor-1">Nossos Endereços</h1>
       <div class="iframe-grid">
         <div class="iframe-1">
