--- a/index.html
+++ b/index.html
@@ -188,13 +188,25 @@
       <div class="iframe-grid">
         <div class="iframe-1">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.1837813209066!2d-37.1556076!3d-8.6214082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x707fba65fecc31d%3A0xc0a412beb4b2ca48!2sCARLOS%20ARA%C3%9AJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342106313!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          <h3>Escritróio Buíque</h3>
-          <p>Av. Jonas Camelo de Almeida, 146</p>
-          <p>Buíque-PE</p>
-          <p>(87)9999999</p>
+          <h3 class="font-poppins">Escritório Buíque</h3>
+          <p class="font-poppins icon-endereco">Av. Jonas Camelo de Almeida, 146</p>
+          <p class="font-poppins icon-cidade">Buíque-PE</p>
+          <p class="font-poppins icon-cidade">CEP 56520-000</p>
+          <p class="font-poppins icon-tel">(87)9999999</p>
         </div>
         <div class="iframe-2">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.6990846883765!2d-37.0598041413136!3d-8.421652099968767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a81bd4b9cf407f%3A0x83cfa429ae68458d!2sCARLOS%20AR%C3%81UJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342185079!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div>
+            <h3 class="font-poppins">Escritório Arcoverde</h3>
+            <ul>
+              <li>
+                <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho, 401</p>
+                <p class="font-poppins icon-cidade">Arcoverde-PE</p>
+                <p class="font-poppins icon-cidade">CEP 56509240</p>
+                <p class="font-poppins icon-tel">(87)9999999</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
