--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
 
   <title>Carlos Araújo-Advocacia</title>
 </head>
+
 <body>
   <header class="header-bg">
     <div class="header-container">
@@ -49,85 +51,94 @@
   </section>
 
   <section class="area-atuacao-bg area-atuacao">
-        <ul class="area-atuacao-lista container" id="area-atuacao">
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-            <h1 class="font-poppins cor-4">Previdenciário</h1>
-            <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
-            <p class="font-poppins cor-0 ">Auxílio Doença</p>
-            <p class="font-poppins cor-0">Aposentadoria por Idade</p>
-            <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
-          </li>
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-            <h1 class="font-poppins cor-4">Criminal</h1>
-            <p class="font-poppins cor-0 ">Flagrante delito</p>
-            <p class="font-poppins cor-0 ">Audiência de custódia</p>
-            <p class="font-poppins cor-0">Inquérito policial</p>
-            <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
-          </li>
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-            <h1 class="font-poppins cor-4">Inventário e Herança</h1>
-            <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
-            <p class="font-poppins cor-0 ">Solução de Conflitos</p>
-            <p class="font-poppins cor-0">Regularização dos Documentos</p>
-            <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
-          </li>
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-            <h1 class="font-poppins cor-4">Trabalhista</h1>
-            <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
-            <p class="font-poppins cor-0 ">Dano Moral e Material</p>
-            <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
-            <p class="font-poppins cor-0">Acidente de Trabalho</p>
-          </li>
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-            <h1 class="font-poppins cor-4">Tributário</h1>
-            <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
-            <p class="font-poppins cor-0 ">Assessoria em procedimentos de fiscalização</p>
-            <p class="font-poppins cor-0">Defesas administrativas</p>
-            <p class="font-poppins cor-0">Planejamento tributário</p>
-          </li>
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-            <h1 class="font-poppins cor-4">Empresarial</h1>
-            <p class="font-poppins cor-0 ">Constituição da empresa</p>
-            <p class="font-poppins cor-0 ">Reestruturação Societária</p>
-            <p class="font-poppins cor-0">Resolução de conflitos entre os sócios</p>
-            <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
-          </li>
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-          <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
-            <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
-            <p class="font-poppins cor-0 ">Recuperação de Valores</p>
-            <p class="font-poppins cor-0">Negociações de Dívidas</p>
-            <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
-          </li>
-          <li>
-            <img src="icons/saldo-escala-esquerda.png" alt="icon">
-            <h1 class="font-poppins cor-4">Divórcio</h1>
-            <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
-            <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
-            <p class="font-poppins cor-0">Partilha de bens</p>
-            <p class="font-poppins cor-0">Pensão Alimentícia para os filhos e/ou cônjuge</p>
-          </li>
-        </ul>
+    <ul class="area-atuacao-lista container" id="area-atuacao">
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Previdenciário</h1>
+        <p class="font-poppins cor-0 ">Aposentadoria Por Tempo de Serviço</p>
+        <p class="font-poppins cor-0 ">Auxílio Doença</p>
+        <p class="font-poppins cor-0">Aposentadoria por Idade</p>
+        <p class="font-poppins cor-0">Aposentadoria Rural Loas/BPC</p>
+      </li>
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Criminal</h1>
+        <p class="font-poppins cor-0 ">Flagrante delito</p>
+        <p class="font-poppins cor-0 ">Audiência de custódia</p>
+        <p class="font-poppins cor-0">Inquérito policial</p>
+        <p class="font-poppins cor-0">Transação Penal e Suspensão Condicional do Processo</p>
+      </li>
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Inventário e Herança</h1>
+        <p class="font-poppins cor-0 ">Divisão entre os Herdeiros</p>
+        <p class="font-poppins cor-0 ">Solução de Conflitos</p>
+        <p class="font-poppins cor-0">Regularização dos Documentos</p>
+        <p class="font-poppins cor-0">Valorização dos Bens na Hora da Venda</p>
+      </li>
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Trabalhista</h1>
+        <p class="font-poppins cor-0 ">Trabalho sem Registro</p>
+        <p class="font-poppins cor-0 ">Dano Moral e Material</p>
+        <p class="font-poppins cor-0">Insalubridade/Periculosidade</p>
+        <p class="font-poppins cor-0">Acidente de Trabalho</p>
+      </li>
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Tributário</h1>
+        <p class="font-poppins cor-0 ">Análise de incentivos fiscais (obter incentivos fiscais)</p>
+        <p class="font-poppins cor-0 ">Assessoria em procedimentos de fiscalização</p>
+        <p class="font-poppins cor-0">Defesas administrativas</p>
+        <p class="font-poppins cor-0">Planejamento tributário</p>
+      </li>
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Empresarial</h1>
+        <p class="font-poppins cor-0 ">Constituição da empresa</p>
+        <p class="font-poppins cor-0 ">Reestruturação Societária</p>
+        <p class="font-poppins cor-0">Resolução de conflitos entre os sócios</p>
+        <p class="font-poppins cor-0">Criação de estruturas de proteção patrimonial</p>
+      </li>
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Cobrança Judicial</h1>
+        <p class="font-poppins cor-0 ">Cobrança de Condomínios e Empresas</p>
+        <p class="font-poppins cor-0 ">Recuperação de Valores</p>
+        <p class="font-poppins cor-0">Negociações de Dívidas</p>
+        <p class="font-poppins cor-0">Cobranças de Cheques e Duplicatas</p>
+      </li>
+      <li>
+        <img src="icons/saldo-escala-esquerda.png" alt="icon">
+        <h1 class="font-poppins cor-4">Divórcio</h1>
+        <p class="font-poppins cor-0 ">Divorcio amigável em Cartório</p>
+        <p class="font-poppins cor-0 ">Divorcio Litigioso Judicial</p>
+        <p class="font-poppins cor-0">Partilha de bens</p>
+        <p class="font-poppins cor-0">Pensão Alimentícia para os filhos e/ou cônjuge</p>
+      </li>
+    </ul>
   </section>
 
   <section class="escritorio-bg container" id="escritorio">
     <div class="escritorio-conteudo">
       <div><img src="images/escritorio-1.jpeg" alt="escritorio"></div>
-        <div>
-          <p class="font-poppins cor-3">Escritório</p>
-          <h1 class="font-poppins">Bem-vindo a Carlos Araújo Advocacia</h1>
-          <p class="font-poppins">Com mais de 10 anos de experiência no campo jurídico, a Carlos Araújo Advocacia destaca-se por seu comprometimento, transparência e excelência no atendimento aos clientes. Nossa equipe altamente qualificada está preparada para fornecer soluções jurídicas eficientes e assertivas, atendendo às demandas de pessoas físicas, empresas e condomínios.</p>
-          <p class="font-poppins">Buscamos constantemente atualizar nossos conhecimentos, acompanhando as tendências e mudanças legislativas, a fim de oferecer um serviço jurídico de qualidade e alinhado às necessidades de nossos clientes. Nossa abordagem é fundamentada na ética, compromisso e profissionalismo, com o objetivo de defender os interesses dos nossos clientes de forma diligente.</p>
-          <p class="font-poppins">Carlos Araújo Advocacia, proporcionamos um ambiente acolhedor e confiável. Nosso objetivo é garantir seu conforto e segurança, tendo a certeza de que seu caso está nas mãos de profissionais competentes. Estamos prontos para oferecer a representação jurídica necessária e buscar as melhores soluções para suas demandas legais.</p>
-          <a href="./"><button class="btn1 font-poppins">Agendar Agora</button></a>
-        </div>
+      <div>
+        <p class="font-poppins cor-3">Escritório</p>
+        <h1 class="font-poppins">Bem-vindo a Carlos Araújo Advocacia</h1>
+        <p class="font-poppins">Com mais de 10 anos de experiência no campo jurídico, a Carlos Araújo Advocacia
+          destaca-se por seu comprometimento, transparência e excelência no atendimento aos clientes. Nossa equipe
+          altamente qualificada está preparada para fornecer soluções jurídicas eficientes e assertivas, atendendo às
+          demandas de pessoas físicas, empresas e condomínios.</p>
+        <p class="font-poppins">Buscamos constantemente atualizar nossos conhecimentos, acompanhando as tendências e
+          mudanças legislativas, a fim de oferecer um serviço jurídico de qualidade e alinhado às necessidades de nossos
+          clientes. Nossa abordagem é fundamentada na ética, compromisso e profissionalismo, com o objetivo de defender
+          os interesses dos nossos clientes de forma diligente.</p>
+        <p class="font-poppins">Carlos Araújo Advocacia, proporcionamos um ambiente acolhedor e confiável. Nosso
+          objetivo é garantir seu conforto e segurança, tendo a certeza de que seu caso está nas mãos de profissionais
+          competentes. Estamos prontos para oferecer a representação jurídica necessária e buscar as melhores soluções
+          para suas demandas legais.</p>
+        <a href="./"><button class="btn1 font-poppins">Agendar Agora</button></a>
+      </div>
     </div>
   </section>
 
@@ -145,7 +156,7 @@
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
-          </div>
+            </div>
           </div>
         </li>
 
@@ -158,7 +169,7 @@
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
-          </div>
+            </div>
           </div>
           <div class="grid-colum-2"><img src="images/advg-2.jpeg" alt="advogado"></div>
         </li>
@@ -173,36 +184,58 @@
               <a href="https://wa.me/5587996507215" target="_blank"><img src="icons/icon-zap.png" alt="zap"></a>
               <a href="#" target="_blank"><img src="icons/icon-instagram.png" alt="instagram"></a>
               <a href="mailto:aaaa_@gmail.com" target="_blank"><img src="icons/icon-email.png" alt="email"></a>
-          </div>
+            </div>
           </div>
         </li>
       </ul>
     </div>
   </section>
 
-  
+
   <section class="contato-bg">
     <div class="contato-conteudo container">
       <p class="font-poppins cor-4">Como chegar</p>
       <h1 class="font-poppins cor-1">Nossos Endereços</h1>
       <div class="iframe-grid">
         <div class="iframe-1">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.1837813209066!2d-37.1556076!3d-8.6214082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x707fba65fecc31d%3A0xc0a412beb4b2ca48!2sCARLOS%20ARA%C3%9AJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342106313!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.1837813209066!2d-37.1556076!3d-8.6214082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x707fba65fecc31d%3A0xc0a412beb4b2ca48!2sCARLOS%20ARA%C3%9AJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342106313!5m2!1spt-BR!2sbr"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
           <h3 class="font-poppins">Escritório Buíque</h3>
-          <p class="font-poppins icon-endereco">Av. Jonas Camelo de Almeida, 146</p>
-          <p class="font-poppins icon-cidade">Buíque-PE</p>
-          <p class="font-poppins icon-cidade">CEP 56520-000</p>
-          <p class="font-poppins icon-tel">(87)9999999</p>
+          <ul>
+            <li>
+              <p class="font-poppins icon-endereco">Av. Jonas Camelo de Almeida, 146</p>
+            </li>
+            <li>
+              <p class="font-poppins icon-cidade">Buíque-PE</p>
+            </li>
+            <li>
+              <p class="font-poppins icon-cidade">CEP 56520-000</p>
+            </li>
+            <li>
+              <p class="font-poppins icon-tel">(87)9999999</p>
+            </li>
+          </ul>
         </div>
         <div class="iframe-2">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.6990846883765!2d-37.0598041413136!3d-8.421652099968767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a81bd4b9cf407f%3A0x83cfa429ae68458d!2sCARLOS%20AR%C3%81UJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342185079!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d986.6990846883765!2d-37.0598041413136!3d-8.421652099968767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a81bd4b9cf407f%3A0x83cfa429ae68458d!2sCARLOS%20AR%C3%81UJO%20ADVOCACIA!5e0!3m2!1spt-BR!2sbr!4v1721342185079!5m2!1spt-BR!2sbr"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
           <div>
             <h3 class="font-poppins">Escritório Arcoverde</h3>
             <ul>
               <li>
                 <p class="font-poppins icon-endereco">R. Francisco Leonardo Filho, 401</p>
+              </li>
+              <li>
                 <p class="font-poppins icon-cidade">Arcoverde-PE</p>
+              </li>
+              <li>
                 <p class="font-poppins icon-cidade">CEP 56509240</p>
+              </li>
+              <li>
                 <p class="font-poppins icon-tel">(87)9999999</p>
               </li>
             </ul>
@@ -213,4 +246,5 @@
   </section>
   <script type="module" src="./js/script.js"></script>
 </body>
+
 </html>
